--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
-/* src/styles/main.css */
+/**
+ * src/styles/main.css
+ *
+ * @format
+ */
 
 :root {
   --primary-color: #4a9d5b;
@@ -15,9 +19,9 @@ body {
   font-family: "Roboto", sans-serif;
   color: var(--text-color);
   background-color: var(--background-color);
-  line-height: 1.6;
-  margin: 0;
-  padding: 0;
+  margin: 0%;
+  padding: 0%;
+  text-decoration: none;
 }
 
 .app {
@@ -27,11 +31,9 @@ body {
 }
 
 .main-content {
-  flex: 1;
-  padding: 2rem;
-  max-width: 1200px;
+  max-width: 1920px;
   margin: 0 auto;
-  width: 100%;
+  width: 90%;
 }
 
 /* Header Styles */
@@ -42,8 +44,8 @@ body {
 }
 
 .header__logo-link {
-  color: var(--primary-color);
-  font-size: 1.5rem;
+  color: red;
+  font-size: 40px;
   font-weight: bold;
   text-decoration: none;
 }
@@ -76,7 +78,6 @@ body {
   color: #ffffff; /* Color for the active link */
   border-bottom: 2px solid #007b5e; /* Optional underline effect */
 }
-
 
 /* Footer Styles */
 .footer {
@@ -115,18 +116,26 @@ body {
 
 /* Home Page Styles */
 .hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./Images/hero.jpg");
+  background-image: linear-gradient(
+      rgba(67, 115, 150, 0.5),
+      rgba(101, 101, 96, 0.474)
+    ),
+    url("./Images/banner-pad.avif");
   background-size: cover;
   background-position: center;
   color: var(--white);
   text-align: center;
-  padding: 4rem 2rem;
+  background-repeat: no-repeat;
   margin-bottom: 2rem;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero__title {
-  font-size: 2.5rem;
+  font-size: 48px;
   margin-bottom: 1rem;
 }
 
@@ -134,7 +143,12 @@ body {
   font-size: 1.2rem;
   margin-bottom: 2rem;
 }
-
+.total {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 .hero__cta-button {
   background-color: var(--secondary-color);
   color: var(--white);
@@ -147,10 +161,10 @@ body {
 .hero__cta-button:hover {
   background-color: #e67e22;
 }
-.featured-products{
+.featured-products {
   text-align: center;
+  font-size: 20px;
 }
-
 
 /* src/styles/Home.css */
 .featured-products__list {
@@ -163,7 +177,6 @@ body {
   border: 1px solid #e0e0e0;
   padding: 20px;
   text-align: center;
-  max-width: 250px;
 }
 
 .product-card__image {
@@ -195,24 +208,28 @@ body {
   margin-top: 10px;
 }
 
-
-.about-us{
+.about-us {
   text-align: center;
+  font-size: 20px;
+  line-height: 1.6;
 }
 
 /* Product List Styles */
 .product-list__grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 2rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
 }
-
+.product-list__title {
+  text-align: center;
+}
 .product-card {
   background-color: var(--white);
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
+  width: 100%;
 }
 
 .product-card:hover {
@@ -224,7 +241,7 @@ body {
   height: 200px;
   object-fit: cover;
 }
-.product-card-cart__image{
+.product-card-cart__image {
   width: auto;
   height: 80px;
   border-radius: 20px;
@@ -246,7 +263,7 @@ body {
   background-color: var(--primary-color);
   color: var(--white);
   text-align: center;
-  padding: 0.30rem;
+  padding: 0.3rem;
   text-decoration: none;
   transition: background-color 0.3s ease;
 }
@@ -256,7 +273,6 @@ body {
 }
 .product-card__button.added {
   background-color: #ffc107;
-  
 }
 
 /* Product Details Styles */
@@ -386,7 +402,6 @@ body {
   text-decoration: none;
 } */
 
-
 .cart__items {
   list-style-type: none;
   padding: 0px;
@@ -395,17 +410,17 @@ body {
 
 .cart-item {
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
   background-color: var(--white);
   padding: 20px; /* Add more padding for a neater look */
   margin-bottom: 1rem;
   border-radius: 8px; /* Slightly round corners */
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15); /* Slightly stronger shadow */
-  
+
   transition: box-shadow 0.3s ease; /* Add transition for hover effect */
 }
-.cartitem{
+.cartitem {
   display: flex;
   margin: 0 auto;
   width: 90%;
@@ -489,10 +504,9 @@ body {
   color: darken(var(--primary-color), 10%); /* Slightly darker color on hover */
 }
 
-
-
 /* Login and Register Form Styles */
-.login,.register{
+.login,
+.register {
   text-align: center;
 }
 .login-form,
@@ -642,8 +656,6 @@ body {
   background-color: #005c47;
 }
 
-
-
 /* src/styles/CartPage.css */
 .cart-page {
   max-width: 800px;
@@ -687,15 +699,12 @@ button:hover {
   background-color: #005c47;
 }
 
-.product-list-display-buttons{
+.product-list-display-buttons {
   display: flex;
   flex-direction: row;
   margin: 0 auto;
   gap: 30px;
 }
-
-
-
 
 /* Responsive Design */
 /* src/styles/responsive.css */
@@ -708,6 +717,8 @@ button:hover {
 
   .header__nav-list {
     flex-direction: column;
+    align-items: start;
+    gap: 12px;
   }
 
   .header__nav-item {
@@ -724,7 +735,11 @@ button:hover {
   }
 
   .product-list__grid {
-    grid-template-columns: 1fr;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    flex-direction: column;
+    align-items: center;
   }
 
   .product-details {
@@ -743,7 +758,9 @@ button:hover {
   .cart-item__remove {
     margin-top: 0.5rem;
   }
-
+  .about-us__text {
+    font-size: 1rem;
+  }
   .footer__content {
     flex-direction: column;
   }
@@ -751,6 +768,13 @@ button:hover {
   .footer__section {
     margin-right: 0;
     margin-bottom: 1rem;
+  }
+  .featured-products__list {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -776,6 +800,13 @@ button:hover {
     flex-basis: 50%;
     margin-bottom: 1rem;
   }
+  .featured-products__list {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /* Large devices (small laptops and desktops, 901px to 1200px) */
@@ -795,18 +826,10 @@ button:hover {
 
 /* Extra styles for better responsiveness */
 @media only screen and (max-width: 900px) {
-  .main-content {
-    padding: 1rem;
-  }
-
   .login-form,
   .register-form,
   .checkout-form {
     max-width: 100%;
-  }
-
-  .hero {
-    padding: 2rem 1rem;
   }
 
   .hero__cta-button {
